# ToyRaster

./: .gitignore  CMakeLists.txt  README.md
include/: application.h  camera.h  color.h  core.h  entity.h  frameBuffer.h  loader.h  mat4.h  maths.h  mesh.h  quat.h  rasterizer.h  renderer.h  scene.h  shader.h  texture.h  transform.h  util.h  vec2.h  vec3.h  vec4.h  vertex.h
src/: application.cpp  loader.cpp  main.cpp  rasterizer.cpp  renderer.cpp  shader.cpp
